--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -29,33 +29,46 @@
  JAP_Five_Reform_Directives:0 "五大改革指令"
  JAP_The_Three_Arrows:0 "三本の矢"
  JAP_Suzuki_Nomics:0 "鈴木ノミクス"
+ JAP_The_Transformation_of_the_Japanese_Archipelago:0 "日本列島改造論"
  JAP_Suzuki_and_Anan:0 "鈴木と阿南"
  JAP_Civilian_System:0 "文民統制"
- JAP_Exclusively_Defense-Oriented_Policy:0 "専守防衛"
  JAP_Breakwaters_of_the_Pacific:0 "太平洋の防波堤"
  JAP_Eternal_peace:0 "永遠の平和"
  JAP_First_California-Japanese_Treaty:0 "第一次日加条約"
  JAP_Second_California-Japanese_Treaty:0 "第二次日加条約"
  JAP_Third_California-Japanese_Treaty:0 "第三次日加条約"
  JAP_Treaty_on_the_Annexation_of_California:0 "加利福尼亜併合ニ関スル条約"
+ JAP_Working_with_the_UK:0 "英国との協調"
+ JAP_Togo-Bevin_Agreement:0 "東郷・ベヴィン協定"
+ JAP_Lord_Duke:0 "公爵閣下"
  JAP_New_institutional_movement:0 "新体制運動"
  JAP_Appointment_of_innovative_bureaucrats:0 "革新官僚の任命"
  JAP_Establishment_of_a_new_economic_system:0 "経済新体制確立"
  JAP_New_Order_of_East_Asia:0 "東亜新秩序"
  JAP_Cooperation_with_control_groups:0 "統制派との連携"
- JAP_Expand_the_co_prosperity_sphere_to_the_other_side_of_the_river:0 "共栄圏を対岸に拡大"
- JAP_Intervention_in_civil_war:0 "内戦に介入"
+ JAP_Abolition_of_the_system_of_military_ministers_on_active_service:0 "軍部大臣現役武官制の撤廃"
+ JAP_Formation_of_the_Koaha:0 "興亜派の結成"
+ JAP_The_rise_of_Koaha:0 "興亜派の台頭"
  JAP_New_regime_movement_in_the_outer_regions:0 "外地の新体制運動"
+ JAP_Support_for_the_Malayan_Volunteer_Force:0 "マレー義勇軍の支援"
+ JAP_Support_for_the_Borneo_Volunteer_Force:0 "ボルネオ義勇軍の支援"
+ JAP_Support_for_the_Burmese_National_Army:0 "ビルマ国民軍の支援"
+ JAP_No_Anglo-American_pacifism:0 "英米本位の平和主義を排す"
+ JAP_Organisation_of_the_Eastern_Conference:0 "東方会議の開催"
  JAP_Korean_Tiger:0 "朝鮮の虎"
+ JAP_Nae_Seon_Il_Che:0 "内鮮一体"
  JAP_Conservative_bureaucratic_appointments:0 "保守官僚の任命"
+ JAP_Gasoline_vehicles:0 "ガソリン自動車"
  JAP_Japan-Manchuria-Shina_Economic_Bloc:0 "日満支経済ブロック"
  JAP_Koiso_and_Yonai:0 "小磯と米内"
+ JAP_Establishment_of_the_Supreme_War_Guidance_Council:0 "最高戦争指導会議の設置"
+ JAP_Let_s_keep_the_military_in_check:0 "軍部を抑えよう"
  JAP_Establishment_of_the_Chief_of_the_Supreme_Command:0 "最高幕僚長の設置"
  JAP_Miao_Pin_route:0 "援繆ルート"
  JAP_The_Koiso-Miao_Pin_Agreement:0 "小磯・繆斌協定"
- JAP_Formation_of_the_Governing_Board_of_the_United_States_of_America:0 "亜米利加統治委員会の発足"
- JAP_Dealing_with_a_dying_sick_man_on_the_other_side_of_the_river:0 "対岸の瀕死の病人に対処"
- JAP_Expanded_governance_to_all_of_sub_America:0 "亜米利加全土に統治を拡大"
+ JAP_Opposite_shore_management:0 "対岸経営"
+ JAP_Expanding_influence_on_Fujian:0 "福建への影響力拡大"
+ JAP_Franco-Japanese_cooperation:0 "日仏協調...？"
  GEACPS_NF_JAP_53:0 ""
  GEACPS_NF_JAP_54:0 ""
  GEACPS_NF_JAP_55:0 ""
