--- a/localisation/countries_colony_l_english.yml
+++ b/localisation/countries_colony_l_english.yml
@@ -1,4 +1,5 @@
 ﻿l_english:
+#アジア
  AFG_dominion:0 "アフガン自治領"
  AFG_dominion_DEF:0 "アフガン自治領"
  AFG_colony:0 "$OVERLORDADJ$領アフガン植民地"
@@ -458,7 +459,58 @@
  GXC_soviet_member_republic_DEF:0 "広西$OVERLORDADJ$社会主義共和国"
  GXC_soviet_autonomous_republic:0 "広西自治$OVERLORDADJ$社会主義共和国"
  GXC_soviet_autonomous_republic_DEF:0 "広西自治$OVERLORDADJ$社会主義共和国"
-
+ 
+ IND_dominion:0 "インド自治領"
+ IND_dominion_DEF:0 "インド自治領"
+ IND_colony:0 "$OVERLORDADJ$領インド植民地"
+ IND_colony_DEF:0 "$OVERLORDADJ$領インド植民地"
+ IND_colony_ADJ:0 "$OVERLORDADJ$領インド"
+ IND_overseas_territory:0 "$OVERLORDADJ$領インド"
+ IND_overseas_territory_DEF:0 "$OVERLORDADJ$領インド"
+ IND_overseas_territory_HOL:0 "$OVERLORDADJ$領インド地域"
+ IND_overseas_territory_HOL_DEF:0 "$OVERLORDADJ$領インド地域"
+ IND_overseas_territory_POR:0 "$OVERLORDADJ$領インド海外州"
+ IND_overseas_territory_POR_DEF:0 "$OVERLORDADJ$領インド海外州"
+ IND_overseas_territory_SPR:0 "$OVERLORDADJ$領インド州"
+ IND_overseas_territory_SPR_DEF:0 "$OVERLORDADJ$領インド州"
+ IND_overseas_territory_ADJ:0 "$OVERLORDADJ$領インド"
+ IND_federation_of_colonies:0 "$OVERLORDADJ$領インド連邦"
+ IND_federation_of_colonies_DEF:0 "$OVERLORDADJ$領インド連邦"
+ IND_federation_of_colonies_ADJ:0 "$OVERLORDADJ$領インド"
+ IND_colony_and_protectorate:0 "$OVERLORDADJ$領インド植民地及び保護領"
+ IND_colony_and_protectorate_DEF:0 "$OVERLORDADJ$領インド植民地及び保護領"
+ IND_colony_and_protectorate_ADJ:0 "$OVERLORDADJ$領インド"
+ IND_protected_territory:0 "$OVERLORDADJ$保護領インド"
+ IND_protected_territory_DEF:0 "$OVERLORDADJ$保護領インド"
+ IND_protected_territory_ADJ:0 "$OVERLORDADJ$領インド"
+ IND_mandate:0 "$OVERLORDADJ$委任統治領インド地域"
+ IND_mandate_DEF:0 "$OVERLORDADJ$委任統治領インド地域"
+ IND_mandate_ADJ:0 "$OVERLORDADJ$領インド"
+ IND_imperial_member:0 "$OVERLORDADJ$領インド王国"
+ IND_imperial_member_DEF:0 "$OVERLORDADJ$領インド王国"
+ IND_imperial_member_ADJ:0 "$OVERLORDADJ$領インド"
+ IND_imperial_overseas_territory:0 "$OVERLORDADJ$領インド"
+ IND_imperial_overseas_territory_DEF:0 "$OVERLORDADJ$領インド"
+ IND_imperial_overseas_territory_ADJ:0 "$OVERLORDADJ$領インド"
+ IND_us_commonwealth:0 "$OVERLORDADJ$領インド自治連邦区"
+ IND_us_commonwealth_DEF:0 "$OVERLORDADJ$領インド自治連邦区"
+ IND_us_commonwealth_ADJ:0 "$OVERLORDADJ$領インド"
+ IND_us_territory:0 "$OVERLORDADJ$領インド準州"
+ IND_us_territory_DEF:0 "$OVERLORDADJ$領インド準州"
+ IND_us_territory_ADJ:0 "$OVERLORDADJ$領インド"
+ IND_soviet_member_federal_republic:0 "インド・$OVERLORDADJ$連邦社会主義共和国"
+ IND_soviet_member_federal_republic_DEF:0 "インド・$OVERLORDADJ$連邦社会主義共和国"
+ IND_soviet_member_republic:0 "インド・$OVERLORDADJ$社会主義共和国"
+ IND_soviet_member_republic_DEF:0 "インド・$OVERLORDADJ$社会主義共和国"
+ IND_soviet_autonomous_republic:0 "インド自治$OVERLORDADJ$社会主義共和国"
+ IND_soviet_autonomous_republic_DEF:0 "インド自治$OVERLORDADJ$社会主義共和国"
+ IND_junior_partner_state:0 "$OVERLORDADJ$領インド帝国"
+ IND_junior_partner_state_DEF:0 "$OVERLORDADJ$領インド帝国"
+ IND_junior_partner_state_ADJ:0 "$OVERLORDADJ$領インド"
+ IND_JAP_junior_partner_state:0 "$OVERLORDADJ$領印度帝国"
+ IND_JAP_junior_partner_state_DEF:0 "$OVERLORDADJ$領印度帝国"
+ IND_JAP_junior_partner_state_ADJ:0 "$OVERLORDADJ$領印度"
+ 
  INS_dominion:0 "東インド自治領"
  INS_dominion_DEF:0 "東インド自治領"
  INS_colony:0 "$OVERLORDADJ$領東インド植民地"
@@ -593,7 +645,7 @@
  ISR_soviet_member_republic_DEF:0 "$イスラエル・$OVERLORDADJ$社会主義共和国"
  ISR_soviet_autonomous_republic:0 "$イスラエル自治$OVERLORDADJ$社会主義共和国"
  ISR_soviet_autonomous_republic_DEF:0 "$イスラエル自治$OVERLORDADJ$社会主義共和国"
-
+ 
  JAP_dominion:0 "日本自治領"
  JAP_dominion_DEF:0 "日本自治領"
  JAP_colony:0 "$OVERLORDADJ$領日本植民地"
@@ -1539,57 +1591,6 @@
  QAT_soviet_autonomous_republic:0 "カタール自治$OVERLORDADJ$社会主義共和国"
  QAT_soviet_autonomous_republic_DEF:0 "カタール自治$OVERLORDADJ$社会主義共和国"
 
- IND_dominion:0 "インド自治領"
- IND_dominion_DEF:0 "インド自治領"
- IND_colony:0 "$OVERLORDADJ$領インド植民地"
- IND_colony_DEF:0 "$OVERLORDADJ$領インド植民地"
- IND_colony_ADJ:0 "$OVERLORDADJ$領インド"
- IND_overseas_territory:0 "$OVERLORDADJ$領インド"
- IND_overseas_territory_DEF:0 "$OVERLORDADJ$領インド"
- IND_overseas_territory_HOL:0 "$OVERLORDADJ$領インド地域"
- IND_overseas_territory_HOL_DEF:0 "$OVERLORDADJ$領インド地域"
- IND_overseas_territory_POR:0 "$OVERLORDADJ$領インド海外州"
- IND_overseas_territory_POR_DEF:0 "$OVERLORDADJ$領インド海外州"
- IND_overseas_territory_SPR:0 "$OVERLORDADJ$領インド州"
- IND_overseas_territory_SPR_DEF:0 "$OVERLORDADJ$領インド州"
- IND_overseas_territory_ADJ:0 "$OVERLORDADJ$領インド"
- IND_federation_of_colonies:0 "$OVERLORDADJ$領インド連邦"
- IND_federation_of_colonies_DEF:0 "$OVERLORDADJ$領インド連邦"
- IND_federation_of_colonies_ADJ:0 "$OVERLORDADJ$領インド"
- IND_colony_and_protectorate:0 "$OVERLORDADJ$領インド植民地及び保護領"
- IND_colony_and_protectorate_DEF:0 "$OVERLORDADJ$領インド植民地及び保護領"
- IND_colony_and_protectorate_ADJ:0 "$OVERLORDADJ$領インド"
- IND_protected_territory:0 "$OVERLORDADJ$保護領インド"
- IND_protected_territory_DEF:0 "$OVERLORDADJ$保護領インド"
- IND_protected_territory_ADJ:0 "$OVERLORDADJ$領インド"
- IND_mandate:0 "$OVERLORDADJ$委任統治領インド地域"
- IND_mandate_DEF:0 "$OVERLORDADJ$委任統治領インド地域"
- IND_mandate_ADJ:0 "$OVERLORDADJ$領インド"
- IND_imperial_member:0 "$OVERLORDADJ$領インド王国"
- IND_imperial_member_DEF:0 "$OVERLORDADJ$領インド王国"
- IND_imperial_member_ADJ:0 "$OVERLORDADJ$領インド"
- IND_imperial_overseas_territory:0 "$OVERLORDADJ$領インド"
- IND_imperial_overseas_territory_DEF:0 "$OVERLORDADJ$領インド"
- IND_imperial_overseas_territory_ADJ:0 "$OVERLORDADJ$領インド"
- IND_us_commonwealth:0 "$OVERLORDADJ$領インド自治連邦区"
- IND_us_commonwealth_DEF:0 "$OVERLORDADJ$領インド自治連邦区"
- IND_us_commonwealth_ADJ:0 "$OVERLORDADJ$領インド"
- IND_us_territory:0 "$OVERLORDADJ$領インド準州"
- IND_us_territory_DEF:0 "$OVERLORDADJ$領インド準州"
- IND_us_territory_ADJ:0 "$OVERLORDADJ$領インド"
- IND_soviet_member_federal_republic:0 "インド・$OVERLORDADJ$連邦社会主義共和国"
- IND_soviet_member_federal_republic_DEF:0 "インド・$OVERLORDADJ$連邦社会主義共和国"
- IND_soviet_member_republic:0 "インド・$OVERLORDADJ$社会主義共和国"
- IND_soviet_member_republic_DEF:0 "インド・$OVERLORDADJ$社会主義共和国"
- IND_soviet_autonomous_republic:0 "インド自治$OVERLORDADJ$社会主義共和国"
- IND_soviet_autonomous_republic_DEF:0 "インド自治$OVERLORDADJ$社会主義共和国"
- IND_junior_partner_state:0 "$OVERLORDADJ$領インド帝国"
- IND_junior_partner_state_DEF:0 "$OVERLORDADJ$領インド帝国"
- IND_junior_partner_state_ADJ:0 "$OVERLORDADJ$領インド"
- IND_JAP_junior_partner_state:0 "$OVERLORDADJ$領印度帝国"
- IND_JAP_junior_partner_state_DEF:0 "$OVERLORDADJ$領印度帝国"
- IND_JAP_junior_partner_state_ADJ:0 "$OVERLORDADJ$領印度"
-
  SAU_dominion:0 "サウジアラビア自治領"
  SAU_dominion_DEF:0 "サウジアラビア自治領"
  SAU_colony:0 "$OVERLORDADJ$領サウジアラビア植民地"
@@ -2354,7 +2355,8 @@
  YUN_soviet_member_republic_DEF:0 "雲南$OVERLORDADJ$社会主義共和国"
  YUN_soviet_autonomous_republic:0 "雲南自治$OVERLORDADJ$社会主義共和国"
  YUN_soviet_autonomous_republic_DEF:0 "雲南自治$OVERLORDADJ$社会主義共和国"
-
+ 
+#ヨーロッパ
  ADU_dominion:0 "アンダルシア自治領"
  ADU_dominion_DEF:0 "アンダルシア自治領"
  ADU_colony:0 "$OVERLORDADJ$領アンダルシア植民地"
@@ -2985,51 +2987,6 @@
  CZE_soviet_autonomous_republic:0 "チェコ自治$OVERLORDADJ$社会主義共和国"
  CZE_soviet_autonomous_republic_DEF:0 "チェコ自治$OVERLORDADJ$社会主義共和国"
 
- EGR_dominion:0 "東ドイツ自治領"
- EGR_dominion_DEF:0 "東ドイツ自治領"
- EGR_colony:0 "$OVERLORDADJ$領東ドイツ植民地"
- EGR_colony_DEF:0 "$OVERLORDADJ$領東ドイツ植民地"
- EGR_colony_ADJ:0 "$OVERLORDADJ$領東ドイツ"
- EGR_overseas_territory:0 "$OVERLORDADJ$領東ドイツ"
- EGR_overseas_territory_DEF:0 "$OVERLORDADJ$領東ドイツ"
- EGR_overseas_territory_HOL:0 "$OVERLORDADJ$領東ドイツ地域"
- EGR_overseas_territory_HOL_DEF:0 "$OVERLORDADJ$領東ドイツ地域"
- EGR_overseas_territory_POR:0 "$OVERLORDADJ$領東ドイツ海外州"
- EGR_overseas_territory_POR_DEF:0 "$OVERLORDADJ$領東ドイツ海外州"
- EGR_overseas_territory_SPR:0 "$OVERLORDADJ$領東ドイツ州"
- EGR_overseas_territory_SPR_DEF:0 "$OVERLORDADJ$領東ドイツ州"
- EGR_overseas_territory_ADJ:0 "$OVERLORDADJ$領東ドイツ"
- EGR_federation_of_colonies:0 "$OVERLORDADJ$領東ドイツ連邦"
- EGR_federation_of_colonies_DEF:0 "$OVERLORDADJ$領東ドイツ連邦"
- EGR_federation_of_colonies_ADJ:0 "$OVERLORDADJ$領東ドイツ"
- EGR_colony_and_protectorate:0 "$OVERLORDADJ$領東ドイツ植民地及び保護領"
- EGR_colony_and_protectorate_DEF:0 "$OVERLORDADJ$領東ドイツ植民地及び保護領"
- EGR_colony_and_protectorate_ADJ:0 "$OVERLORDADJ$領東ドイツ"
- EGR_protected_territory:0 "$OVERLORDADJ$保護領東ドイツ"
- EGR_protected_territory_DEF:0 "$OVERLORDADJ$保護領東ドイツ"
- EGR_protected_territory_ADJ:0 "$OVERLORDADJ$領東ドイツ"
- EGR_mandate:0 "$OVERLORDADJ$委任統治領東ドイツ地域"
- EGR_mandate_DEF:0 "$OVERLORDADJ$委任統治領東ドイツ地域"
- EGR_mandate_ADJ:0 "$OVERLORDADJ$領東ドイツ"
- EGR_imperial_member:0 "$OVERLORDADJ$領東ドイツ王国"
- EGR_imperial_member_DEF:0 "$OVERLORDADJ$領東ドイツ王国"
- EGR_imperial_member_ADJ:0 "$OVERLORDADJ$領東ドイツ"
- EGR_imperial_overseas_territory:0 "$OVERLORDADJ$領東ドイツ"
- EGR_imperial_overseas_territory_DEF:0 "$OVERLORDADJ$領東ドイツ"
- EGR_imperial_overseas_territory_ADJ:0 "$OVERLORDADJ$領東ドイツ"
- EGR_us_commonwealth:0 "$OVERLORDADJ$領東ドイツ自治連邦区"
- EGR_us_commonwealth_DEF:0 "$OVERLORDADJ$領東ドイツ自治連邦区"
- EGR_us_commonwealth_ADJ:0 "$OVERLORDADJ$領東ドイツ"
- EGR_us_territory:0 "$OVERLORDADJ$領東ドイツ準州"
- EGR_us_territory_DEF:0 "$OVERLORDADJ$領東ドイツ準州"
- EGR_us_territory_ADJ:0 "$OVERLORDADJ$領東ドイツ"
- EGR_soviet_member_federal_republic:0 "東ドイツ・$OVERLORDADJ$連邦社会主義共和国"
- EGR_soviet_member_federal_republic_DEF:0 "東ドイツ・$OVERLORDADJ$連邦社会主義共和国"
- EGR_soviet_member_republic:0 "東ドイツ・$OVERLORDADJ$社会主義共和国"
- EGR_soviet_member_republic_DEF:0 "東ドイツ・$OVERLORDADJ$社会主義共和国"
- EGR_soviet_autonomous_republic:0 "東ドイツ自治$OVERLORDADJ$社会主義共和国"
- EGR_soviet_autonomous_republic_DEF:0 "東ドイツ自治$OVERLORDADJ$社会主義共和国"
-
  DEN_dominion:0 "デンマーク自治領"
  DEN_dominion_DEF:0 "デンマーク自治領"
  DEN_colony:0 "$OVERLORDADJ$領デンマーク植民地"
@@ -3074,7 +3031,52 @@
  DEN_soviet_member_republic_DEF:0 "デンマーク・$OVERLORDADJ$社会主義共和国"
  DEN_soviet_autonomous_republic:0 "デンマーク自治$OVERLORDADJ$社会主義共和国"
  DEN_soviet_autonomous_republic_DEF:0 "デンマーク自治$OVERLORDADJ$社会主義共和国"
-
+ 
+ EGR_dominion:0 "東ドイツ自治領"
+ EGR_dominion_DEF:0 "東ドイツ自治領"
+ EGR_colony:0 "$OVERLORDADJ$領東ドイツ植民地"
+ EGR_colony_DEF:0 "$OVERLORDADJ$領東ドイツ植民地"
+ EGR_colony_ADJ:0 "$OVERLORDADJ$領東ドイツ"
+ EGR_overseas_territory:0 "$OVERLORDADJ$領東ドイツ"
+ EGR_overseas_territory_DEF:0 "$OVERLORDADJ$領東ドイツ"
+ EGR_overseas_territory_HOL:0 "$OVERLORDADJ$領東ドイツ地域"
+ EGR_overseas_territory_HOL_DEF:0 "$OVERLORDADJ$領東ドイツ地域"
+ EGR_overseas_territory_POR:0 "$OVERLORDADJ$領東ドイツ海外州"
+ EGR_overseas_territory_POR_DEF:0 "$OVERLORDADJ$領東ドイツ海外州"
+ EGR_overseas_territory_SPR:0 "$OVERLORDADJ$領東ドイツ州"
+ EGR_overseas_territory_SPR_DEF:0 "$OVERLORDADJ$領東ドイツ州"
+ EGR_overseas_territory_ADJ:0 "$OVERLORDADJ$領東ドイツ"
+ EGR_federation_of_colonies:0 "$OVERLORDADJ$領東ドイツ連邦"
+ EGR_federation_of_colonies_DEF:0 "$OVERLORDADJ$領東ドイツ連邦"
+ EGR_federation_of_colonies_ADJ:0 "$OVERLORDADJ$領東ドイツ"
+ EGR_colony_and_protectorate:0 "$OVERLORDADJ$領東ドイツ植民地及び保護領"
+ EGR_colony_and_protectorate_DEF:0 "$OVERLORDADJ$領東ドイツ植民地及び保護領"
+ EGR_colony_and_protectorate_ADJ:0 "$OVERLORDADJ$領東ドイツ"
+ EGR_protected_territory:0 "$OVERLORDADJ$保護領東ドイツ"
+ EGR_protected_territory_DEF:0 "$OVERLORDADJ$保護領東ドイツ"
+ EGR_protected_territory_ADJ:0 "$OVERLORDADJ$領東ドイツ"
+ EGR_mandate:0 "$OVERLORDADJ$委任統治領東ドイツ地域"
+ EGR_mandate_DEF:0 "$OVERLORDADJ$委任統治領東ドイツ地域"
+ EGR_mandate_ADJ:0 "$OVERLORDADJ$領東ドイツ"
+ EGR_imperial_member:0 "$OVERLORDADJ$領東ドイツ王国"
+ EGR_imperial_member_DEF:0 "$OVERLORDADJ$領東ドイツ王国"
+ EGR_imperial_member_ADJ:0 "$OVERLORDADJ$領東ドイツ"
+ EGR_imperial_overseas_territory:0 "$OVERLORDADJ$領東ドイツ"
+ EGR_imperial_overseas_territory_DEF:0 "$OVERLORDADJ$領東ドイツ"
+ EGR_imperial_overseas_territory_ADJ:0 "$OVERLORDADJ$領東ドイツ"
+ EGR_us_commonwealth:0 "$OVERLORDADJ$領東ドイツ自治連邦区"
+ EGR_us_commonwealth_DEF:0 "$OVERLORDADJ$領東ドイツ自治連邦区"
+ EGR_us_commonwealth_ADJ:0 "$OVERLORDADJ$領東ドイツ"
+ EGR_us_territory:0 "$OVERLORDADJ$領東ドイツ準州"
+ EGR_us_territory_DEF:0 "$OVERLORDADJ$領東ドイツ準州"
+ EGR_us_territory_ADJ:0 "$OVERLORDADJ$領東ドイツ"
+ EGR_soviet_member_federal_republic:0 "東ドイツ・$OVERLORDADJ$連邦社会主義共和国"
+ EGR_soviet_member_federal_republic_DEF:0 "東ドイツ・$OVERLORDADJ$連邦社会主義共和国"
+ EGR_soviet_member_republic:0 "東ドイツ・$OVERLORDADJ$社会主義共和国"
+ EGR_soviet_member_republic_DEF:0 "東ドイツ・$OVERLORDADJ$社会主義共和国"
+ EGR_soviet_autonomous_republic:0 "東ドイツ自治$OVERLORDADJ$社会主義共和国"
+ EGR_soviet_autonomous_republic_DEF:0 "東ドイツ自治$OVERLORDADJ$社会主義共和国"
+ 
  ENG_dominion:0 "イングランド自治領"
  ENG_dominion_DEF:0 "イングランド自治領"
  ENG_colony:0 "$OVERLORDADJ$領イングランド植民地"
@@ -16322,3 +16324,19 @@
  WAS_soviet_member_republic_DEF:0 "ワシントン・$OVERLORDADJ$社会主義共和国"
  WAS_soviet_autonomous_republic:0 "ワシントン自治$OVERLORDADJ$社会主義共和国"
  WAS_soviet_autonomous_republic_DEF:0 "ワシントン自治$OVERLORDADJ$社会主義共和国"
+
+##コスメティック
+#アジア
+ STRAITS_ENG-GBR_colony:0 "$OVERLORDADJ$領海峡植民地"
+ STRAITS_ENG-GBR_colony_DEF:0 "$OVERLORDADJ$領海峡植民地"
+ STRAITS_ENG-GBR_colony_ADJ:0 "$OVERLORDADJ$領海峡植民地"
+ 
+#ヨーロッパ
+ KAR_SOV_soviet_member_republic:0 "カレロ＝フィン・ソビエト社会主義共和国"
+ KAR_SOV_soviet_member_republic_DEF:0 "カレロ＝フィン・ソビエト社会主義共和国"
+ KAR_SOV_soviet_member_republic_ADJ:0 "カレロ＝フィンSSR"
+ 
+##汎用
+ COUNTRY_occupied_territory:0 "$OVERLORDADJ$統治下$NONIDEOLOGY$占領地"
+ COUNTRY_occupied_territory_DEF:0 "$OVERLORDADJ$統治下$NONIDEOLOGY_DEF$占領地"
+ COUNTRY_occupied_territory_ADJ:0 "$OVERLORDADJ$統治下$NONIDEOLOGY_ADJ$占領地"
