--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -28,10 +28,6 @@
  CHI_soviet_democratic_republic_DEF:0 "中華ソビエト民主共和国"
  CHI_soviet_government_ADJ:0 "中華ソビエト政府"
  
- JOR_TRANSJORDAN_hashemite_kingdom:0 "トランスヨルダン・ハシミテ王国"
- JOR_TRANSJORDAN_hashemite_kingdom_DEF:0 "トランスヨルダン・ハシミテ王国"
- JOR_TRANSJORDAN_hashemite_kingdom_ADJ:0 "トランスヨルダン"
- 
  MOU-ARM_republic:0 "山岳アルメニア共和国"
  MOU-ARM_republic_DEF:0 "山岳アルメニア共和国"
  MOU-ARM_republic_ADJ:0 "山岳アルメニア"
@@ -60,9 +56,21 @@
  PER_IRAN_empire_DEF:0 "イラン帝国"
  PER_IRAN_empire_ADJ:0 "イラン"
  
- SIA_THAILAND_kingdom:0 "タイ王国"
- SIA_THAILAND_kingdom_DEF:0 "タイ王国"
- SIA_THAILAND_kingdom_ADJ:0 "タイ"
+ TRANSJORDAN_hashemite_kingdom:0 "トランスヨルダン・ハシミテ王国"
+ TRANSJORDAN_hashemite_kingdom_DEF:0 "トランスヨルダン・ハシミテ王国"
+ TRANSJORDAN_hashemite_kingdom_ADJ:0 "トランスヨルダン"
+ 
+ THAILAND_kingdom:0 "タイ王国"
+ THAILAND_kingdom_DEF:0 "タイ王国"
+ THAILAND_kingdom_ADJ:0 "タイ"
+ 
+ TRANSBAIKAL_republic:0 "トランスバイカル共和国"
+ TRANSBAIKAL_republic_DEF:0 "トランスバイカル共和国"
+ TRANSBAIKAL_republic_ADJ:0 "トランスバイカル"
+ 
+ TRANSCAUCASIAN_democratic_federative_republic:0 "トランスコーカサス民主連邦共和国"
+ TRANSCAUCASIAN_democratic_federative_republic_DEF:0 "トランスコーカサス民主連邦共和国"
+ TRANSCAUCASIAN_democratic_federative_republic_ADJ:0 "トランスコーカサス"
  
 #ヨーロッパ
  AUS-HUN_empire:0 "オーストリア諸邦ならびに神聖なるハンガリーのイシュトヴァーン王冠の諸邦"
