--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -28,13 +28,17 @@
  CAM_DEF:0 "カンボジア"
  CAM_ADJ:0 "カンボジア"
  
- CHI:0 "中国"
- CHI_DEF:0 "中国"
- CHI_ADJ:0 "中国"
+ CHI:0 "中華"
+ CHI_DEF:0 "中華"
+ CHI_ADJ:0 "中華"
  
  GEO:0 "グルジア"
  GEO_DEF:0 "グルジア"
  GEO_ADJ:0 "グルジア"
+ 
+ IND:0 "インド"
+ IND_DEF:0 "インド"
+ IND_ADJ:0 "インド"
  
  GXC:0 "広西"
  GXC_DEF:0 "広西"
@@ -135,10 +139,6 @@
  QAT:0 "カタール"
  QAT_DEF:0 "カタール"
  QAT_ADJ:0 "カタール"
- 
- IND:0 "インド"
- IND_DEF:0 "インド"
- IND_ADJ:0 "インド"
  
  SAU:0 "サウジアラビア"
  SAU_DEF:0 "サウジアラビア"
@@ -265,13 +265,13 @@
  CZE_DEF:0 "チェコ"
  CZE_ADJ:0 "チェコ"
  
- EGR:0 "東ドイツ"
- EGR_DEF:0 "東ドイツ"
- EGR_ADJ:0 "東ドイツ"
- 
  DEN:0 "デンマーク"
  DEN:0 "デンマーク"
  DEN_ADJ:0 "デンマーク"
+ 
+ EGR:0 "東ドイツ"
+ EGR_DEF:0 "東ドイツ"
+ EGR_ADJ:0 "東ドイツ"
  
  ENG:0 "イングランド"
  ENG_DEF:0 "イングランド"
@@ -838,10 +838,6 @@
  ANH_DEF:0 "安徽"
  ANH_ADJ:0 "安徽"
  
- AZA:0 "自由インド"
- AZA_DEF:0 "自由インド"
- AZA_ADJ:0 "自由インド"
- 
  BAL:0 "バルーチスターン"
  BAL_DEF:0 "バルーチスターン"
  BAL_ADJ:0 "バルーチスターン"
@@ -1057,10 +1053,6 @@
  TWN:0 "台湾"
  TWN_DEF:0 "台湾"
  TWN_ADJ:0 "台湾"
- 
- VPS:0 "諸藩連邦"
- VPS_DEF:0 "諸藩連邦"
- VPS_ADJ:0 "諸藩連邦"
  
  WTR:0 "西トルキスタン"
  WTR_DEF:0 "西トルキスタン"
