--- a/localisation/_geacps_autonomy_system_l_english.yml
+++ b/localisation/_geacps_autonomy_system_l_english.yml
@@ -16,11 +16,13 @@
  protected_state:0 "保護国"
  
 #その他
- mandate:0 "委任統治領"
- trust_territories:0 "信託統治領"
- leased_territory:0 "租借地"
  condominium:0 "共同統治領"
  junior_partner_state:0 "同君連合下位国"
+ leased_territory:0 "租借地"
+ mandate:0 "委任統治領"
+ occupied_territory:0 "占領地"
+ princely_state:0 "藩王国"
+ trust_territories:0 "信託統治領"
  
 #大日本帝国
  imperial_overseas_territory:0 "外地"
@@ -28,20 +30,16 @@
  imperial_protected_state:0 "帝国保護国"
  
 #中華軍閥
- warlord:0 "中華軍閥"
  autonomous_province:0 "自治省"
- 
+ warlord:0 "中華軍閥"
  tributary_state:0 "冊封国"
  
 #アメリカ
- us_commonwealth:0 "米国自治連邦区"
  us_territory:0 "準州"
+ us_commonwealth:0 "米国自治連邦区"
  
 #ソ連
  soviet_autonomous_republic:0 "自治共和国"
  soviet_member_republic:0 "構成共和国"
  soviet_member_federal_republic:0 "構成連邦共和国"
  soviet_satellite:0 "衛星国"
-
-#インド
- princely_state:0 "藩王国"
