--- a/localisation/_geacps_countries_l_english.yml
+++ b/localisation/_geacps_countries_l_english.yml
@@ -276,6 +276,8 @@
  ALB_republic_total_socialism_DEF:0 "アルバニア社会主義人民共和国"
  ALB_republic_radical_socialism:0 "アルバニア社会主義人民共和国"
  ALB_republic_radical_socialism_DEF:0 "アルバニア社会主義人民共和国"
+ ALB_provisional_government:0 "アルバニア民主政府"
+ ALB_provisional_government_DEF:0 "アルバニア民主政府"
  
  AUS_archduchy:0 "オーストリア大公国"
  AUS_archduchy_DEF:0 "オーストリア大公国"
@@ -504,8 +506,8 @@
  POL_kingdom_DEF:0 "ポーランド王国"
  POL_republic:0 "ポーランド共和国"
  POL_republic_DEF:0 "ポーランド共和国"
- POL_republic_total_socialism:0 "ポーランド人民共和国"
- POL_republic_total_socialism_DEF:0 "ポーランド人民共和国"
+ POL_republic_total_socialism:0 "ポーランド共和国"
+ POL_republic_total_socialism_DEF:0 "ポーランド共和国"
  POL_republic_radical_socialism:0 "ポーランド人民共和国"
  POL_republic_radical_socialism_DEF:0 "ポーランド人民共和国"
  
