--- a/localisation/_geacps_parties_l_english.yml
+++ b/localisation/_geacps_parties_l_english.yml
@@ -169,7 +169,16 @@
  
  BLR_SOV_total_socialism_party:0 "白ロシア共産党"
  
- ALB_total_socialism_party:0 "アルバニア労働者党"
+ ALB_total_socialism_party:0 "アルバニア共産党"
+ ALB_radical_socialism_party:0 "内部マケドニア革命組織"
+ ALB_social_democracy_party:0 "第二次プリズレン連盟"
+ ALB_social_liberalism_party:0 "第二次プリズレン連盟"
+ ALB_classical_liberalism_party:0 "第二次プリズレン連盟"
+ ALB_liberal_conservatism_party:0 "第二次プリズレン連盟"
+ ALB_social_conservatism_party:0 "第二次プリズレン連盟"
+ ALB_authoritative_democracy_party:0 "法治運動"
+ ALB_reactionary_authoritarianism_party:0 "ゾグ家"
+ ALB_national_populism_party:0 "国民戦線"
  
  BUL_total_socialism_party:0 "ブルガリア共産党"
  BUL_radical_socialism_party:0 "内部マケドニア革命組織"
