--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -38,8 +38,10 @@
  JAP_Second_California-Japanese_Treaty:0 "第二次日加条約"
  JAP_Third_California-Japanese_Treaty:0 "第三次日加条約"
  JAP_Treaty_on_the_Annexation_of_California:0 "加利福尼亜併合ニ関スル条約"
- JAP_Working_with_the_UK:0 "英国との協調"
+ JAP_Suzuki_Diplomacy:0 "鈴木外交"
  JAP_Togo-Bevin_Agreement:0 "東郷・ベヴィン協定"
+ JAP_The_Fourth_Japanese-British_Alliancet:0 "第四次日英同盟"
+ JAP_Confronting_the_hegemony_of_the_American_people:0 "米國國民の覇権主義に対峙"
  JAP_Lord_Duke:0 "公爵閣下"
  JAP_New_institutional_movement:0 "新体制運動"
  JAP_Appointment_of_innovative_bureaucrats:0 "革新官僚の任命"
@@ -55,6 +57,8 @@
  JAP_Support_for_the_Burmese_National_Army:0 "ビルマ国民軍の支援"
  JAP_No_Anglo-American_pacifism:0 "英米本位の平和主義を排す"
  JAP_Organisation_of_the_Eastern_Conference:0 "東方会議の開催"
+ JAP_Shigemitsu-Alvarez_Agreement:0 "重光・アルバレス協定"
+ JAP_The_New_One_Nation_Movement:0 "一国新体制運動論"
  JAP_Korean_Tiger:0 "朝鮮の虎"
  JAP_Nae_Seon_Il_Che:0 "内鮮一体"
  JAP_Conservative_bureaucratic_appointments:0 "保守官僚の任命"
