コズメティックの変更とアルバニア民主政府の国旗追加

--- a/localisation/countries_long_l_english.yml
+++ b/localisation/countries_long_l_english.yml
@@ -266,6 +266,8 @@
  ADU_state:0 "アンダルシア国"
  ADU_state_DEF:0 "アンダルシア国"
  
+ ALB_democratic_government:0 "アルバニア民主政府"
+ ALB_democratic_government_DEF:0 "アルバニア民主政府"
  ALB_kingdom:0 "アルバニア王国"
  ALB_kingdom_DEF:0 "アルバニア王国"
  ALB_peoples_republic:0 "アルバニア人民共和国"
@@ -278,8 +280,6 @@
  ALB_republic_total_socialism_DEF:0 "アルバニア社会主義人民共和国"
  ALB_republic_radical_socialism:0 "アルバニア社会主義人民共和国"
  ALB_republic_radical_socialism_DEF:0 "アルバニア社会主義人民共和国"
- ALB_provisional_government:0 "アルバニア民主政府"
- ALB_provisional_government_DEF:0 "アルバニア民主政府"
  
  AUS_archduchy:0 "オーストリア大公国"
  AUS_archduchy_DEF:0 "オーストリア大公国"
@@ -509,10 +509,8 @@
  POL_kingdom_DEF:0 "ポーランド王国"
  POL_republic:0 "ポーランド共和国"
  POL_republic_DEF:0 "ポーランド共和国"
- POL_republic_total_socialism:0 "ポーランド共和国"
- POL_republic_total_socialism_DEF:0 "ポーランド共和国"
- POL_republic_radical_socialism:0 "ポーランド人民共和国"
- POL_republic_radical_socialism_DEF:0 "ポーランド人民共和国"
+ POL_peoples_republic:0 "ポーランド人民共和国"
+ POL_peoples_republic_DEF:0 "ポーランド人民共和国"
  
  POR_kingdom:0 "ポルトガル王国"
  POR_kingdom_DEF:0 "ポルトガル王国"
