--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -177,6 +177,7 @@
  STATE_516:0 "タイミル・ドルガン＝ネネツ"
  STATE_524:0 "澎湖"
  STATE_525:0 "京城"
+ STATE_527:0 "平壌"
  STATE_528:0 "長崎"
  STATE_529:0 "廣島"
  STATE_530:0 "高松"
@@ -657,3 +658,6 @@
  STATE_1203:0 "江原"
  STATE_1204:0 "西アーザルバーイジャーン"
  STATE_1205:0 "コルデスターン"
+ STATE_1206:0 "黄海"
+ STATE_1207:0 "平安"
+ STATE_1208:0 "咸鏡"
