--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -361,9 +361,9 @@
  MNT_DEF:0 "モンテネグロ"
  MNT_ADJ:0 "モンテネグロ"
  
- MOL:0 "モルドバ"
- MOL_DEF:0 "モルドバ"
- MOL_ADJ:0 "モルドバ"
+ MOL:0 "モルダヴィア"
+ MOL_DEF:0 "モルダヴィア"
+ MOL_ADJ:0 "モルダヴィア"
  
  NAV:0 "ナバラ"
  NAV_DEF:0 "ナバラ"
@@ -626,9 +626,9 @@
  TUN_DEF:0 "チュニジア"
  TUN_ADJ:0 "チュニジア"
  
- TZN:0 "タンザニーカ"
- TZN_DEF:0 "タンザニーカ"
- TZN_ADJ:0 "タンザニーカ"
+ TZN:0 "タンガニーカ"
+ TZN_DEF:0 "タンガニーカ"
+ TZN_ADJ:0 "タンガニーカ"
  
  UGA:0 "ウガンダ"
  UGA_DEF:0 "ウガンダ"
