--- a/localisation/countries_long_l_english.yml
+++ b/localisation/countries_long_l_english.yml
@@ -24,6 +24,8 @@
  ARM_republic:0 "アルメニア共和国"
  ARM_republic_DEF:0 "アルメニア共和国"
  
+ AZR_autonomous_republic:0 "アゼルバイジャン自治共和国"
+ AZR_autonomous_republic_DEF:0 "アゼルバイジャン自治共和国"
  AZR_democratic_republic:0 "アゼルバイジャン民主共和国"
  AZR_democratic_republic_DEF:0 "アゼルバイジャン民主共和国"
  AZR_republic:0 "アゼルバイジャン共和国"
@@ -490,8 +492,10 @@
  MLT_republic:0 "マルタ共和国"
  MLT_republic_DEF:0 "マルタ共和国"
  
- MOL_republic:0 "モルドバ共和国"
- MOL_republic_DEF:0 "モルドバ共和国"
+ MOL_democratic_republic:0 "モルダヴィア民主共和国"
+ MOL_democratic_republic_DEF:0 "モルダヴィア民主共和国"
+ MOL_republic:0 "モルダヴィア共和国"
+ MOL_republic_DEF:0 "モルダヴィア共和国"
  
  NAV_kingdom:0 "ナバラ王国"
  NAV_kingdom_DEF:0 "ナバラ王国"
@@ -797,8 +801,8 @@
  TUN_republic:0 "チュニジア共和国"
  TUN_republic_DEF:0 "チュニジア共和国"
  
- TZN_republic:0 "タンザニーカ共和国 "
- TZN_republic_DEF:0 "タンザニーカ共和国 "
+ TZN_republic:0 "タンガニーカ共和国 "
+ TZN_republic_DEF:0 "タンガニーカ共和国 "
  
  UGA_republic:0 "ウガンダ共和国"
  UGA_republic_DEF:0 "ウガンダ共和国"
@@ -1176,8 +1180,18 @@
  RHI_republic:0 "ライン共和国"
  RHI_republic_DEF:0 "ライン共和国"
  
+ RUS_empire:0 "ロシア帝国"
+ RUS_empire_DEF:0 "ロシア帝国"
+ RUS_democratic_federative_republic:0 "ロシア民主連邦共和国"
+ RUS_democratic_federative_republic_DEF:0 "ロシア民主連邦共和国"
+ RUS_federation:0 "ロシア連邦"
+ RUS_federation_DEF:0 "ロシア連邦"
  RUS_republic:0 "ロシア共和国"
  RUS_republic_DEF:0 "ロシア共和国"
+ RUS_state:0 "ロシア国"
+ RUS_state_DEF:0 "ロシア国"
+ RUS_tsardom:0 "ロシア・ツァーリ国"
+ RUS_tsardom_DEF:0 "ロシア・ツァーリ国"
  
  SAR_republic:0 "ザール共和国"
  SAR_republic_DEF:0 "ザール共和国"
@@ -1188,8 +1202,8 @@
  SIB_republic:0 "シベリア共和国"
  SIB_republic_DEF:0 "シベリア共和国"
  
- SIC_TWO_kingdom:0 "両シチリア王国"
- SIC_TWO_kingdom_DEF:0 "両シチリア王国"
+ SIC_kingdom:0 "シチリア王国"
+ SIC_kingdom_DEF:0 "シチリア王国"
  
  SGR_confederation:0 "南ドイツ連邦"
  SGR_confederation_DEF:0 "南ドイツ連邦"
@@ -1267,8 +1281,10 @@
  WAF:0 "西アフリカ"
  WAF_DEF:0 "西アフリカ"
  
- ZAN:0 "ザンジバル"
- ZAN_DEF:0 "ザンジバル"
+ ZAN_sultanate:0 "ザンジバル・スルタン国"
+ ZAN_sultanate_DEF:0 "ザンジバル・スルタン国"
+ ZAN_peoples_republic:0 "ザンジバル人民共和国"
+ ZAN_peoples_republic_DEF:0 "ザンジバル人民共和国"
  
 #新大陸
  AGU:0 "アンギラ"
