--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -123,9 +123,17 @@
  MEK-SCHWERIN_grand_duchy_DEF:0 "メクレンブルク＝シュヴェリーン大公国"
  MEK-SCHWERIN_grand_duchy_ADJ:0 "メクレンブルク＝シュヴェリーン"
  
+ MOLDOVA_republic:0 "モルドバ共和国"
+ MOLDOVA_republic_DEF:0 "モルドバ共和国"
+ MOLDOVA_republic_ADJ:0 "モルドバ"
+ 
  PAP:0 "教皇領"
  PAP_DEF:0 "教皇領"
  PAP_ADJ:0 "教皇領"
+ 
+ TWO-SICILIES_kingdom:0 "両シチリア王国"
+ TWO-SICILIES_kingdom_DEF:0 "両シチリア王国"
+ TWO-SICILIES_kingdom_ADJ:0 "両シチリア"
  
  SER-MNT_kingdom:0 "セルビア・モンテネグロ王国"
  SER-MNT_kingdom_DEF:0 "セルビア・モンテネグロ王国"
