グリーンランドのステート分け, デンマーク植民地, 一部占領地政府への置き換え, ロード画面の統廃合

--- a/localisation/countries_colony_l_english.yml
+++ b/localisation/countries_colony_l_english.yml
@@ -16336,6 +16336,21 @@
  KAR_SOV_soviet_member_republic_DEF:0 "カレロ＝フィン・ソビエト社会主義共和国"
  KAR_SOV_soviet_member_republic_ADJ:0 "カレロ＝フィンSSR"
  
+#新大陸
+ NORTH-GREENLAND_DEN_colony:0 "$OVERLORDADJ$領北グリーンランド植民地"
+ NORTH-GREENLAND_DEN_colony_DEF:0 "$OVERLORDADJ$領北グリーンランド植民地"
+ NORTH-GREENLAND_DEN_colony_ADJ:0 "$OVERLORDADJ$領北グリーンランド"
+ NORTH-GREENLAND_DEN_overseas_territory:0 "$OVERLORDADJ$領北グリーンランド"
+ NORTH-GREENLAND_DEN_overseas_territory_DEF:0 "$OVERLORDADJ$領北グリーンランド"
+ NORTH-GREENLAND_DEN_overseas_territory_ADJ:0 "$OVERLORDADJ$領北グリーンランド"
+ 
+ SOUTH-GREENLAND_DEN_colony:0 "$OVERLORDADJ$領南グリーンランド植民地"
+ SOUTH-GREENLAND_DEN_colony_DEF:0 "$OVERLORDADJ$領南グリーンランド植民地"
+ SOUTH-GREENLAND_DEN_colony_ADJ:0 "$OVERLORDADJ$領南グリーンランド"
+ SOUTH-GREENLAND_DEN_overseas_territory:0 "$OVERLORDADJ$領南グリーンランド"
+ SOUTH-GREENLAND_DEN_overseas_territory_DEF:0 "$OVERLORDADJ$領南グリーンランド"
+ SOUTH-GREENLAND_DEN_overseas_territory_ADJ:0 "$OVERLORDADJ$領南グリーンランド"
+ 
 ##汎用
  COUNTRY_occupied_territory:0 "$OVERLORDADJ$統治下$NONIDEOLOGY$占領地"
  COUNTRY_occupied_territory_DEF:0 "$OVERLORDADJ$統治下$NONIDEOLOGY_DEF$占領地"
