--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -1,33 +1,6 @@
 ﻿l_english:
 #国家形成
 #アジア
- CHI_republic_provisional_government:0 "中華民国臨時政府"
- CHI_republic_provisional_government_DEF:0 "中華民国臨時政府"
- 
- CHI_republic_reformed_government:0 "中華民国維新政府"
- CHI_republic_reformed_government_DEF:0 "中華民国維新政府"
- CHI_republic_reformed_government_ADJ:0 "中華維新政府"
- 
- CHI_republic_chongqing_goverment:0 "中華民国重慶政府"
- CHI_republic_chongqing_goverment_DEF:0 "中華民国重慶政府"
- CHI_republic_chongqing_goverment_ADJ:0 "重慶国民政府"
- 
- CHI_republic_fuzhou_government:0 "中華民国福州政府"
- CHI_republic_fuzhou_government_DEF:0 "中華民国福州政府"
- CHI_republic_fuzhou_government_ADJ:0 "福州国民政府"
- 
- CHI_republic_guangzhou_government:0 "中華民国広州政府"
- CHI_republic_guangzhou_government_DEF:0 "中華民国広州政府"
- CHI_republic_guangzhou_government_ADJ:0 "広州国民政府"
- 
- CHI_republic_wuhan_government:0 "中華民国武漢政府"
- CHI_republic_wuhan_government_DEF:0 "中華民国武漢政府"
- CHI_republic_wuhan_government_ADJ:0 "武漢国民政府"
- 
- CHI_soviet_democratic_republic:0 "中華ソビエト民主共和国"
- CHI_soviet_democratic_republic_DEF:0 "中華ソビエト民主共和国"
- CHI_soviet_government_ADJ:0 "中華ソビエト政府"
- 
  MOU-ARM_republic:0 "山岳アルメニア共和国"
  MOU-ARM_republic_DEF:0 "山岳アルメニア共和国"
  MOU-ARM_republic_ADJ:0 "山岳アルメニア"
@@ -190,3 +163,16 @@
  GLR_anarchy:0 "五大湖地域無政府連盟"
  GLR_anarchy_DEF:0 "五大湖地域無政府連盟"
  GLR_anarchy_ADJ:0 "五大湖地域"
+ 
+#その他
+ RATE:0 "レーテ"
+ RATE_DEF:0 "レーテ"
+ RATE_ADJ:0 "レーテ"
+ 
+ HYOGIKAI:0 "評議会"
+ HYOGIKAI_DEF:0 "評議会"
+ HYOGIKAI_ADJ:0 "評議会"
+ 
+ TANACS:0 "タナーチ"
+ TANACS_DEF:0 "タナーチ"
+ TANACS_ADJ:0 "タナーチ"
