--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -535,7 +535,7 @@
  GNA_ADJ:0 "ギニア"
  
  GNB:0 "ギニアビサウ"
- GNB_DEG:0 "ギニアビサウ"
+ GNB_DEF:0 "ギニアビサウ"
  GNB_ADJ:0 "ギニアビサウ"
  
  IVO:0 "コートジボワール"
@@ -803,10 +803,6 @@
  HAW:0 "ハワイ"
  HAW_DEF:0 "ハワイ"
  HAW_ADJ:0 "ハワイ"
- 
- MHL:0 "マーシャル諸島"
- MHL_DEF:0 "マーシャル諸島"
- MHL_ADJ:0 "マーシャル諸島"
  
  NZL:0 "ニュージーランド"
  NZL_DEF:0 "ニュージーランド"
@@ -1216,9 +1212,9 @@
  FEZ_DEF:0 "フェザーン"
  FEZ_ADJ:0 "フェザーン"
  
- LSO:0 "バストランド"
- LSO_DEF:0 "バストランド"
- LSO_ADJ:0 "バストランド"
+ LSO:0 "レソト"
+ LSO_DEF:0 "レソト"
+ LSO_ADJ:0 "レソト"
  
  MUS:0 "モーリシャス"
  MUS_DEF:0 "モーリシャス"
@@ -1377,6 +1373,10 @@
  KIR:0 "キリバス"
  KIR_DEF:0 "キリバス"
  KIR_ADJ:0 "キリバス"
+ 
+ MHL:0 "マーシャル諸島"
+ MHL_DEF:0 "マーシャル諸島"
+ MHL_ADJ:0 "マーシャル諸島"
  
  NCL:0 "ニューカレドニア"
  NCL_DEF:0 "ニューカレドニア"
