--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -82,6 +82,7 @@
  STATE_95:0 "フロドナ"
  STATE_96:0 "キエフ市"
  STATE_98:0 "グダニスク"
+ STATE_101:0 "南グリーンランド西岸"
  STATE_115:0 "シチリア"
  STATE_120:0 "高地と島々"
  STATE_121:0 "イースト・スコットランド"
@@ -661,3 +662,8 @@
  STATE_1206:0 "黄海"
  STATE_1207:0 "平安"
  STATE_1208:0 "咸鏡"
+ STATE_1209:0 "北グリーンランド西岸"
+ STATE_1210:0 "北グリーンランド東岸"
+ STATE_1211:0 "南グリーンランド東岸"
+ STATE_1212:0 "北グリーンランド内陸部"
+ STATE_1213:0 "南グリーンランド内陸部"
