--- a/localisation/countries_long_l_english.yml
+++ b/localisation/countries_long_l_english.yml
@@ -55,6 +55,20 @@
  
  CHI_republic:0 "中華民国"
  CHI_republic_DEF:0 "中華民国"
+ CHI_republic_provisional_government:0 "中華民国臨時政府"
+ CHI_republic_provisional_government_DEF:0 "中華民国臨時政府"
+ CHI_republic_reformed_government:0 "中華民国維新政府"
+ CHI_republic_reformed_government_DEF:0 "中華民国維新政府"
+ CHI_republic_chongqing_goverment:0 "中華民国重慶政府"
+ CHI_republic_chongqing_goverment_DEF:0 "中華民国重慶政府"
+ CHI_republic_fuzhou_government:0 "中華民国福州政府"
+ CHI_republic_fuzhou_government_DEF:0 "中華民国福州政府"
+ CHI_republic_guangzhou_government:0 "中華民国広州政府"
+ CHI_republic_guangzhou_government_DEF:0 "中華民国広州政府"
+ CHI_republic_wuhan_government:0 "中華民国武漢政府"
+ CHI_republic_wuhan_government_DEF:0 "中華民国武漢政府"
+ CHI_soviet_democratic_republic:0 "中華ソビエト民主共和国"
+ CHI_soviet_democratic_republic_DEF:0 "中華ソビエト民主共和国"
  
  GEO_democratic_republic:0 "グルジア民主共和国"
  GEO_democratic_republic_DEF:0 "グルジア民主共和国"
