--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -11,12 +11,12 @@
  JAP_Naval_officer_s_purge:0 "海軍士官の粛軍"
  JAP_Stability_of_the_situation:0 "事態の安定"
  JAP_Economy:0 "経済"
+ JAP_Supporting_local_industrial_news_federations:0 "各地の産業報国連盟を支援"
  JAP_Military:0 "軍事"
  JAP_Question_of_interference_with_the_General_Staff:0 "統帥権干渉問題"
  JAP_Kantaro_Suzuki:0 "鈴木貫太郎"
  JAP_Fumimaro_Konoe:0 "近衛文麿"
  JAP_Kuniaki_Koiso:0 "小磯國昭"
- JAP_Dai_Nippon_Sangyo_Hoho_Diet:0 "大日本産業報国会"
  JAP_Yokosuka_Naval_Arsenal:0 "横須賀海軍工廠"
  JAP_Kure_Naval_Arsenal:0 "呉海軍工廠"
  JAP_Maizuru_Naval_Factory:0 "舞鶴海軍工廠"
@@ -25,102 +25,8 @@
  JAP_Tang_Rong_Artillery_Factory:0 "唐栄砲兵工廠"
  JAP_Pyongyang_Weapons_Factory:0 "平壌兵器製造所"
  JAP_Army_Aviation_Factory:0 "陸軍航空工廠"
- JAP_Oni_no_Kantaro:0 "鬼の貫太郎"
- JAP_Five_Reform_Directives:0 "五大改革指令"
- JAP_The_Three_Arrows:0 "三本の矢"
- JAP_Suzuki_Nomics:0 "鈴木ノミクス"
- JAP_The_Transformation_of_the_Japanese_Archipelago:0 "日本列島改造論"
- JAP_Suzuki_and_Anan:0 "鈴木と阿南"
- JAP_Civilian_System:0 "文民統制"
- JAP_Breakwaters_of_the_Pacific:0 "太平洋の防波堤"
- JAP_Eternal_peace:0 "永遠の平和"
- JAP_First_California-Japanese_Treaty:0 "第一次日加条約"
- JAP_Second_California-Japanese_Treaty:0 "第二次日加条約"
- JAP_Third_California-Japanese_Treaty:0 "第三次日加条約"
- JAP_Treaty_on_the_Annexation_of_California:0 "加利福尼亜併合ニ関スル条約"
- JAP_Suzuki_Diplomacy:0 "鈴木外交"
- JAP_Togo-Bevin_Agreement:0 "東郷・ベヴィン協定"
- JAP_The_Fourth_Japanese-British_Alliancet:0 "第四次日英同盟"
- JAP_Confronting_the_hegemony_of_the_American_people:0 "米國國民の覇権主義に対峙"
- JAP_Lord_Duke:0 "公爵閣下"
- JAP_New_institutional_movement:0 "新体制運動"
- JAP_Appointment_of_innovative_bureaucrats:0 "革新官僚の任命"
- JAP_Establishment_of_a_new_economic_system:0 "経済新体制確立"
- JAP_New_Order_of_East_Asia:0 "東亜新秩序"
- JAP_Cooperation_with_control_groups:0 "統制派との連携"
- JAP_Abolition_of_the_system_of_military_ministers_on_active_service:0 "軍部大臣現役武官制の撤廃"
- JAP_Formation_of_the_Koaha:0 "興亜派の結成"
- JAP_The_rise_of_Koaha:0 "興亜派の台頭"
- JAP_New_regime_movement_in_the_outer_regions:0 "外地の新体制運動"
- JAP_Support_for_the_Malayan_Volunteer_Force:0 "マレー義勇軍の支援"
- JAP_Support_for_the_Borneo_Volunteer_Force:0 "ボルネオ義勇軍の支援"
- JAP_Support_for_the_Burmese_National_Army:0 "ビルマ国民軍の支援"
- JAP_No_Anglo-American_pacifism:0 "英米本位の平和主義を排す"
- JAP_Organisation_of_the_Eastern_Conference:0 "東方会議の開催"
- JAP_Shigemitsu-Alvarez_Agreement:0 "重光・アルバレス協定"
- JAP_The_New_One_Nation_Movement:0 "一国新体制運動論"
- JAP_Korean_Tiger:0 "朝鮮の虎"
- JAP_Nae_Seon_Il_Che:0 "内鮮一体"
- JAP_Conservative_bureaucratic_appointments:0 "保守官僚の任命"
- JAP_Gasoline_vehicles:0 "ガソリン自動車"
- JAP_Japan-Manchuria-Shina_Economic_Bloc:0 "日満支経済ブロック"
- JAP_Koiso_and_Yonai:0 "小磯と米内"
- JAP_Establishment_of_the_Supreme_War_Guidance_Council:0 "最高戦争指導会議の設置"
- JAP_Let_s_keep_the_military_in_check:0 "軍部を抑えよう"
- JAP_Establishment_of_the_Chief_of_the_Supreme_Command:0 "最高幕僚長の設置"
- JAP_Miao_Pin_route:0 "援繆ルート"
- JAP_The_Koiso-Miao_Pin_Agreement:0 "小磯・繆斌協定"
- JAP_Opposite_shore_management:0 "対岸経営"
- JAP_Expanding_influence_on_Fujian:0 "福建への影響力拡大"
- JAP_Franco-Japanese_cooperation:0 "日仏協調...？"
- GEACPS_NF_JAP_53:0 ""
- GEACPS_NF_JAP_54:0 ""
- GEACPS_NF_JAP_55:0 ""
- GEACPS_NF_JAP_56:0 ""
- GEACPS_NF_JAP_57:0 ""
- GEACPS_NF_JAP_58:0 ""
- GEACPS_NF_JAP_59:0 ""
- GEACPS_NF_JAP_60:0 ""
- GEACPS_NF_JAP_61:0 ""
- GEACPS_NF_JAP_62:0 ""
- GEACPS_NF_JAP_63:0 ""
- GEACPS_NF_JAP_64:0 ""
- GEACPS_NF_JAP_65:0 ""
- GEACPS_NF_JAP_66:0 ""
- GEACPS_NF_JAP_67:0 ""
- GEACPS_NF_JAP_68:0 ""
- GEACPS_NF_JAP_69:0 ""
- GEACPS_NF_JAP_70:0 ""
- GEACPS_NF_JAP_71:0 ""
- GEACPS_NF_JAP_72:0 ""
- GEACPS_NF_JAP_73:0 ""
- GEACPS_NF_JAP_74:0 ""
- GEACPS_NF_JAP_75:0 ""
- GEACPS_NF_JAP_76:0 ""
- GEACPS_NF_JAP_77:0 ""
- GEACPS_NF_JAP_78:0 ""
- GEACPS_NF_JAP_79:0 ""
- GEACPS_NF_JAP_80:0 ""
- GEACPS_NF_JAP_81:0 ""
- GEACPS_NF_JAP_82:0 ""
- GEACPS_NF_JAP_83:0 ""
- GEACPS_NF_JAP_84:0 ""
- GEACPS_NF_JAP_85:0 ""
- GEACPS_NF_JAP_86:0 ""
- GEACPS_NF_JAP_87:0 ""
- GEACPS_NF_JAP_88:0 ""
- GEACPS_NF_JAP_89:0 ""
- GEACPS_NF_JAP_80:0 ""
- GEACPS_NF_JAP_91:0 ""
- GEACPS_NF_JAP_92:0 ""
- GEACPS_NF_JAP_93:0 ""
- GEACPS_NF_JAP_94:0 ""
- GEACPS_NF_JAP_95:0 ""
- GEACPS_NF_JAP_96:0 ""
- GEACPS_NF_JAP_97:0 ""
- GEACPS_NF_JAP_98:0 ""
- GEACPS_NF_JAP_99:0 ""
- GEACPS_NF_JAP_100:0 ""
+ 
+#国家方針
  GEACPS_NF_JAP_army_00:0 "軍部の統一"
  GEACPS_NF_JAP_navy_01:0 "これからの帝国海軍に向き合う"
  GEACPS_NF_JAP_navy_capital_ship:0 "主力艦の整備"
