--- a/localisation/geacps_FRA_l_english.yml
+++ b/localisation/geacps_FRA_l_english.yml
@@ -364,7 +364,7 @@
  FRA_purge_against_the_collaboraturs:0 "コラボラトゥールに対する粛清"
  FRA_our_dearest_enemy:0 "我々の最も親愛なる敵"
  
-#首長
+#政府首班
  FRA_Charles_de_Gaulle:0 "シャルル・ド・ゴール"
  
 #イベント
