--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -94,14 +94,17 @@
  
 #首長
  JAP_Hideki_Tojo:0 "東條英機"
+ JAP_Kisaburo_Ando:0 "安藤紀三郎"
+ JAP_Mamoru_Shigemitsu:0 "重光葵"
  
 #イベント
  geacps_JAP.1.t:0 "大日本帝國"
  geacps_JAP.1.d:0 "A"
  geacps_JAP.1.a:0 "天皇陛下万歳！"
  geacps_JAP.2.t:0 "一・二二事件"
- geacps_JAP.2.d:0 "A"
- geacps_JAP.2.a:0 "首謀者を逮捕しろ！"
+ geacps_JAP.2.d:0 "昭和21年1月22日、陸軍青年将校らと一部の農本主義思想家、海軍の青年将校たちが帝都にてクーデターを起こし、銃撃された東条首相は重体になられた。この事件と未だ続く志那事変の対処の為にも直ぐに臨時代理を決める必要がある。\n臨時代理としては、内務大臣である安藤紀三郎と外務大臣である重光葵の二人がいる。"
+ geacps_JAP.2.a:0 "東條の腹心・分身の安藤紀三郎に"
+ geacps_JAP.2.b:0 ""欠点がない"重光葵に"
  geacps_JAP.001.title:0 "海軍を主導する人材の選定"
  geacps_JAP.001.desc:0 "太平洋戦争では今までの戦争とは打って変わった戦法も重要であることが分かった。これらのことを踏まえ、我々はこれからの時代の帝国艦隊を率いていく人材を選定する必要がある。これは国家の存亡にかかわる重大な事案であり、慎重に考えなければならない・・・"
  geacps_JAP.001.a:0 "航空主兵主義者を据え置く"
