海とアメリカの色を変更

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -902,9 +902,9 @@
  HUB_DEF:0 "湖北"
  HUB_ADJ:0 "湖北"
  
- HYD:0 "ハイダラバード"
- HYD_DEF:0 "ハイダラバード"
- HYD_ADJ:0 "ハイダラバード"
+ HYD:0 "ハイデラバード"
+ HYD_DEF:0 "ハイデラバード"
+ HYD_ADJ:0 "ハイデラバード"
  
  INC:0 "インドシナ"
  INC_DEF:0 "インドシナ"
