--- a/localisation/_geacps_traitsl_l_english.yml
+++ b/localisation/_geacps_traitsl_l_english.yml
@@ -1,4 +1,10 @@
 ﻿l_english:
- JAP_emperor:0 "天皇"
- MAN_emperor:0 "満州国皇帝"
- ETH_emperor:0 "エチオピア皇帝"
+#Emperor
+ CHI_emperor:0 "§G中華皇帝§!"
+ ETH_emperor:0 "§Gエチオピア皇帝§!"
+ JAP_emperor:0 "§G天皇§!"
+ MAN_emperor:0 "§G満州国皇帝§!"
+ 
+#King
+ AFG_king:0 "§Gアフガニスタン国王§!"
+ BHU_king:0 "§Gブータン国王§!"
