--- a/localisation/_geacps_generic_l_english.yml
+++ b/localisation/_geacps_generic_l_english.yml
@@ -10,13 +10,16 @@
  Focus_on_the_private_sector_two:0 "民間への注力 II"
  Focus_on_the_private_sector_three:0 "民間への注力 III"
  Focus_on_national_defense:0 "国土防衛への注力"
+ Mainland_fortification:0 "本土の要塞化"
  Development_of_nuclear_weapons:0 "核兵器の開発"
  Investing_in_technology:0 "技術への投資"
  Focus_on_basic_electronics:0 "基礎電子工学への注力"
  Increased_construction_speed:0 "建設速度の向上"
  Focus_on_industry:0 "産業への注力"
  Increased_production_capacity:0 "生産能力の向上"
- Investing_in_infrastructure:0 "インフラへの投資"
+ Investing_in_infrastructure_I:0 "インフラへの投資 I"
+ Investing_in_infrastructure_II:0 "インフラへの投資 II"
+ Investing_in_infrastructure_III:0 "インフラへの投資 III"
  Air_Force:0 "[ROOT.GetName]空軍"
  Lend-Lease_from_other_countries:0 "他国からのレンドリース"
  Original_research:0 "独自の研究"
@@ -26,22 +29,24 @@
  Tactical_aircraft_specialization:0 "戦術航空機の特化"
  Expansion_of_air_force_base:0 "空軍基地の増設"
  Rocket_development:0 "ロケットの開発"
+ Jet_aircraft_development:0 "ジェット機の開発"
  Navy:0 "[ROOT.GetName]海軍"
  Flexible_navy:0 "柔軟な海軍"
- Focus_on_submarines_one:0 "潜水艦への注力 I"
- Focus_on_submarines_two:0 "潜水艦への注力 II"
+ Focus_on_submarines:0 "潜水艦への注力"
+ Focus_on_destroyers:0 "駆逐艦への注力"
  Large_navy:0 "大規模海軍"
  Focus_on_capital_ships:0 "主力艦への注力"
  Focus_on_aircraft_carriers:0 "航空母艦への注力"
  Expansion_of_naval_base:0 "海軍基地の増設"
  Army:0 "[ROOT.GetName]陸軍"
- Focus_on_armor_one:0 "機甲科への注力 I"
- Focus_on_armor_two:0 "機甲科への注力 II"
- Focus_on_artillery_equipment_one:0 "砲兵装備への注力 I"
- Focus_on_artillery_equipment_two:0 "砲兵装備への注力 II"
- Mainland_fortification:0 "本土の要塞化"
- Focus_on_infantry_equipment_one:0 "歩兵装備への注力 I"
- Jet_aircraft_development:0 "ジェット機の開発"
+ Focus_on_light_tanks:0 "軽戦車への注力"
+ Focus_on_medium_tanks:0 "中戦車への注力"
+ Focus_on_heavy_tanks:0 "重戦車への注力"
+ Focus_on_artillery_equipment_I:0 "砲兵装備への注力 I"
+ Focus_on_artillery_equipment_II:0 "砲兵装備への注力 II"
+ Focus_on_artillery_equipment_III:0 "砲兵装備への注力 III"
+ Focus_on_infantry_equipment_I:0 "歩兵装備への注力 I"
+ Focus_on_infantry_equipment_II:0 "歩兵装備への注力 II"
+ Focus_on_infantry_equipment_III:0 "歩兵装備への注力 III"
  Focus_on_special_forces:0 "特殊部隊への注力"
  Focus_on_doctrine:0 "ドクトリンへの注力"
- Focus_on_infantry_equipment_two:0 "歩兵装備への注力 II"
