--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -94,8 +94,8 @@
  
 #首長
  JAP_Hideki_Tojo:0 "東條英機"
- JAP_Kisaburo_Ando:0 "安藤紀三郎"
- JAP_Mamoru_Shigemitsu:0 "重光葵"
+ JAP_Kisaburo_Ando:0 "安藤紀三郎"#臨時代理
+ JAP_Mamoru_Shigemitsu:0 "重光葵"#臨時代理
  
 #イベント
  geacps_JAP.1.t:0 "大日本帝國"
@@ -121,6 +121,8 @@
  geacps_JAP.003.c:0 "空軍"
  
 #ディシジョン
+ JAP_1-22_Incident:0 "一・二二事件"
+ JAP_Outbreak_of_the_1-22_Incident:0 "一・二二事件の発生"
  JAP_national_policy_research_outline:0 "国策研究大綱"
  JAP_national_policy_research_outline_desc:0 "研究こそすべて！\n頑張ろう\nこのディシジョンは4年ごとに選択可能です"
  national_policy_research_outline:0 "[GetYear]年国策研究大綱"
