--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -2,7 +2,7 @@
 #国家方針
  JAP_1-22_Incident:0 "一・二二事件"
  JAP_Opening_of_the_extraordinary_session:0 "臨時会の開会"
- JAP_Declaration_of_martial_law:0 "戒厳の宣告"
+ JAP_Declaration_of_martial_law:0 "戒嚴の宣告"
  JAP_Election_of_Prime_Minister:0 "首相の選出"
  JAP_Draft_Constitution:0 "憲法草案"
  JAP_Draft_budget:0 "予算案"
@@ -84,6 +84,7 @@
  GEACPS_NF_JAP_navy_19:0 ""
  
 #国民精神
+ JAP_Martial_law:0 "戒嚴令"
  JAP_high_defence_state_system:0 "高度国防国家体制"
  JAP_planning_institute:0 "企画院"
  JAP_active_military_service_for_ministers_of_war:0 "軍部大臣現役武官制"
@@ -122,7 +123,9 @@
  
 #ディシジョン
  JAP_1-22_Incident:0 "一・二二事件"
- JAP_Outbreak_of_the_1-22_Incident:0 "一・二二事件の発生"
+ JAP_1-22_Incident_desc:0 "憲兵によると、我が国における反政府運動が激化しようとしているらしい。\n具体的にどのような人物、もしくは組織が裏に潜んでいるかという事は掴めてはいないものの、帝都の襲撃又は占拠等の後、政府首脳・重臣への襲撃を計画しているらしい。\nこの馬鹿馬鹿しい計画に対し、どの様に行動すべきだろうか？"
+ Outbreak_of_the_1-22_Incident:0 "一・二二事件の発生"
+ Outbreak_of_the_1-22_Incident_desc:0 "一・二二事件の発生"
  JAP_national_policy_research_outline:0 "国策研究大綱"
  JAP_national_policy_research_outline_desc:0 "研究こそすべて！\n頑張ろう\nこのディシジョンは4年ごとに選択可能です"
  national_policy_research_outline:0 "[GetYear]年国策研究大綱"
